@@ -6,7 +6,7 @@ FONTCONFIG_REQUIRED=1.0.1	dnl Same as in Pango, ???
 GDK_PIXBUF_REQUIRED=1.3.7
 GLIB_REQUIRED=2.11.0
 LIBXML_REQUIRED=2.4.7
-CAIRO_REQUIRED=1.0.2
+CAIRO_REQUIRED=1.1.2
 PANGOFT2_REQUIRED=1.2.0
 
 AC_SUBST(GDK_PIXBUF_REQUIRED)
